# agent-3-the-memory

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LAB-DESAFIO.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: memory_policy.yaml  safety_settings.yaml
docs/: LAB-GUIADO-01-DETECCAO-RECUSA-LLM.md
prompts/: context_injector.jinja2  negotiator.jinja2
src/: agent_router.py  exceptions.py  main.py  memory_gateway.py  session_gateway.py  state_models.py  telemetry.py
tests/: test_memory_recall.py  test_session_fsm.py  test_session_gateway.py
